%% Identity Service schema — derived from identity.dbml
%% Cross-service references are intentionally omitted.
erDiagram
  Accounts {
    uuid id PK
    varchar status
    timestamptz created_at
  }

  EmailCredentials {
    uuid account_id PK
    varchar email UK
    varchar password_hash
    integer failed_login_count
    timestamptz locked_until
    timestamptz created_at
    timestamptz updated_at
  }

  AccountDeletionRequests {
    uuid id PK
    uuid account_id
    uuid idempotency_key
    varchar status
    timestamptz requested_at
  }

  RegistrationAttempts {
    uuid id PK
    varchar email
    varchar registration_proof_hash
    varchar request_fingerprint
    varchar locale
    varchar pending_password_hash
    timestamptz expires_at
    timestamptz completed_at
    timestamptz abandoned_at
    uuid activated_account_id
    timestamptz created_at
  }

  RegistrationVerificationTokens {
    uuid id PK
    uuid attempt_id
    timestamptz attempt_expires_at
    varchar verifier_hash
    timestamptz issued_at
    timestamptz expires_at
    timestamptz redeemed_at
  }

  RefreshFamilies {
    uuid id PK
    uuid account_id
    varchar device_id
    varchar status
    timestamptz expires_at
    timestamptz created_at
    timestamptz last_activity_at
    timestamptz revoked_at
    varchar revoke_reason
    timestamptz reuse_detected_at
  }

  RefreshCredentials {
    uuid id PK
    uuid family_id
    varchar verifier_hash
    timestamptz created_at
    timestamptz redeemed_at
    uuid replaced_by_credential_id
    uuid rotation_idempotency_key
    timestamptz retry_until
  }

  RateLimitBuckets {
    varchar scope_key PK
    timestamptz window_started_at
    integer attempt_count
    timestamptz expires_at
  }

  OutboxEvents {
    uuid event_id PK
    varchar event_type
    integer event_version
    varchar aggregate_type
    varchar aggregate_id
    jsonb payload
    timestamptz occurred_at
    timestamptz available_at
    uuid correlation_id
    uuid causation_id
    varchar trace_id
    uuid claim_id
    timestamptz claimed_until
    timestamptz published_at
    integer attempt_count
    varchar last_error
  }

  Accounts ||--o| EmailCredentials : "account_id"
  Accounts ||--o| AccountDeletionRequests : "account_id (no cascade; max one pending)"
  RegistrationAttempts ||--|{ RegistrationVerificationTokens : "attempt_id"
  Accounts ||--o{ RefreshFamilies : "account_id"
  RefreshFamilies ||--|{ RefreshCredentials : "family_id"
  RefreshCredentials o|--o| RefreshCredentials : "replaced_by_credential_id"
